--- a/flight-delay-webapp/package.json
+++ b/flight-delay-webapp/package.json
@@ -9,6 +9,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "convert-csv-to-array": "^1.0.3",
+    "csv-parser": "^3.0.0",
+    "fs": "^0.0.1-security",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-image-file-resizer": "^0.4.8",
