--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@mui/material": "^5.11.14"
+    "@mui/material": "^5.11.14",
+    "csv-parser": "^3.0.0",
+    "fs": "^0.0.1-security"
   }
 }
