--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
-  "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@mui/material": "^5.11.14"
+  "devDependencies": {
+    "prettier": "3.0.3"
   }
 }
