trying to fix dynamic popup html

--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -30,6 +30,6 @@
     ],
     
   
-  "permissions": ["scripting","activeTab"],
+  "permissions": ["scripting","activeTab", "tabs"],
   "host_permissions": ["<all_urls>"]
 }
