--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -17,7 +17,7 @@
       },
       {
         "matches": ["https://booking.flyfrontier.com/Flight/Select"],
-        "js": ["js/deltaScript.js"],
+        "js": ["js/frontierScript.js"],
         "run_at": "document_idle",
         "all_frames": true
       },
