Google flights Scraping

--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -26,6 +26,12 @@
         "js": ["js/southwestScript.js"],
         "run_at":"document_idle",
         "all_frames":true
+      },
+      {
+        "matches": ["*://www.google.com/travel/flights/*"],
+        "js": ["js/GoogleScraping.js"],
+        "run_at":"document_idle",
+        "all_frames":true
       }
     ],
     
