--- a/dataviz-react/.gitignore
+++ b/dataviz-react/.gitignore
@@ -1,3 +1,5 @@
+.gitignore
+
 # Logs
 logs
 *.log
@@ -22,3 +24,9 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment Variables
+.env
+.env.local
+.env.development
+.env.production
