--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.14",
+    "axios": "^1.8.1",
     "csv-parser": "^3.0.0",
-    "firebase": "^11.0.1",
+    "firebase": "^11.4.0",
+    "firebase-functions": "^6.3.2",
     "fs": "^0.0.1-security"
   }
 }
