--- a/dataviz-react/functions/package.json
+++ b/dataviz-react/functions/package.json
@@ -14,6 +14,8 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@types/axios": "^0.9.36",
+    "axios": "^1.8.1",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
     "node-fetch": "^2.6.1"
